js/src/tests/test262/built-ins/Error/tostring-1.js
assert
.
sameValue
(
new
Error
(
)
.
toString
(
)
'
Error
'
'
new
Error
.
toString
(
)
returns
"
Error
"
'
)
;
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
assert
.
sameValue
(
new
Error
(
)
.
toString
(
)
'
[
object
Error
]
'
'
new
Error
.
toString
(
)
returns
"
[
object
Error
]
"
(
Object
.
prototype
.
toString
)
'
)
;
reportCompare
(
0
0
)
;
